# siphon

./: README.md
controller/: Dockerfile  README.md  build.sh  package-lock.json  run.sh
controller/src/: __init__.py  config.js  configLoader.py  connection.js  controlmsg.js  executor.py  logger.js  package-lock.json  package.json  server.js  serverworker.js  siphonflowscheduler.js  static_2N_file_udp_routes.json  static_2N_file_udp_routes_backchannel.json  static_3N_file_udp_routes.json  static_3N_file_udp_routes_backchannel.json  static_routes.json  static_udp_routes.json  statis_2N_udp_routes.json  workers.py
controller/src/applications/: __init__.py  baseRouting.py  msgTypes.py  routing_base.py  routing_waterfilling.py  test_input.json
controller/test/: test_loadConfig.py  test_logger.js  test_logger.py  test_multiworkers.py
datapath/: CMakeLists.txt  Dockerfile  README.md  build.sh  clean.sh  dependencies.sh  docker-compose.yml  main.cpp  main_sender_only.cpp
datapath/coder/: coding_parameters.hpp
datapath/debug_container/: Dockerfile  README.md  docker-compose.yml
datapath/examples/: relay_config.json  tcp_config.json  udp_config.json  udp_config_FEC.json
datapath/siphon/: CMakeLists.txt  aggregator.cpp  aggregator.hpp
datapath/siphon/apps/: app_manager.cpp  app_manager.hpp  pseudo_app.cpp  pseudo_app.hpp
datapath/siphon/base/: base_block_message.h  message.cpp  message.hpp  minion.cpp  minion.hpp  minion_pool.cpp  minion_pool.hpp  mpsc_queue.hpp  owned_memory_chunk.hpp  thread_pool.cpp  thread_pool.hpp
datapath/siphon/coder/: fake_udp_coder.hpp  udp_coder_factory.hpp  udp_coder_interfaces.cpp  udp_coder_interfaces.hpp
datapath/siphon/controller/: controller_connection.cpp  controller_connection.hpp  controller_proxy.cpp  controller_proxy.hpp  crossbar.cpp  crossbar.hpp  forwarding_table.cpp  forwarding_table.hpp  forwarding_table_entry.cpp  forwarding_table_entry.hpp  node_manager.cpp  node_manager.hpp  notification_center.hpp  notification_observers.hpp  notification_types.hpp
datapath/siphon/networking/: connection_interfaces.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_connection_manager.cpp  tcp_connection_manager.hpp  udp_connection.cpp  udp_connection.hpp  udp_connection_manager.cpp  udp_connection_manager.hpp
datapath/siphon/proto/: CMakeLists.txt  message_header.proto  siphon.proto
datapath/siphon/tests/: CMakeLists.txt  fake_connection_test_util.hpp  fake_controller.hpp  gtest_coders.cpp  gtest_controller_connection.cpp  gtest_directpass_coder.cpp  gtest_message.cpp  gtest_minions.cpp  gtest_tcp_connection.cpp  gtest_template.cpp  gtest_udp_connection.cpp  oriData.txt
datapath/siphon/util/: Message_Dictionary.cpp  Message_Dictionary.h  Message_FIFO.cpp  Message_FIFO.h  config.cpp  config.hpp  data_generator.cpp  data_generator.h  file_operator.cpp  file_operator.h  logger.cpp  logger.hpp  message_util.cpp  message_util.hpp  types.hpp
datapath/unit-testing/: CMakeLists.txt  main.c
datapath/unit-testing/demos/: example-codeRS.c  example-codec.c
datapath/unit-testing/scripts/: demo_copies  demo_rs  original-data.txt  run_demo_copies  run_demo_rs
datapath/unit-testing/src/: CMakeLists.txt  main_Macro.h  message.h
datapath/unit-testing/src/FIFOqueue/: FIFO.c  FIFO.h
datapath/unit-testing/src/utils/: Dictionary.c  Dictionary.h
